src/objects/FMP_Diagnostic__c.object
<CustomObject>
    <fields>
        <fullName>FaunaFloraRecoveryPlan__c</fullName>
        <formula>IF( TEXT(PMF_Farm__r.promotesFloraAndFaunaPreservation__c) = &quot;Si se cumple&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FaunaFloraRecoveryPlan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMF_Farm__c</fullName>
        <label>PMF_Farm</label>
        <referenceTo>CBL2_Farm__c</referenceTo>
        <relationshipLabel>FMP_Diagnostics_Farm</relationshipLabel>
        <relationshipName>FMP_Diagnostics_Farm</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adequateTransportation__c</fullName>
        <formula>IF( TEXT(PMF_Farm__r.wetmill_protectsTransport__c) = &quot;Sí&quot; &amp;&amp; TEXT(PMF_Farm__r.wetmill_transportWithChemicals__c) = &quot;No&quot; , &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>adequateTransportation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>channelsScamperOk__c</fullName>
        <formula>IF( INCLUDES( PMF_Farm__r.wetmill_coffeWashMeans__c, &quot;Canal de correteo&quot;) = TRUE &amp;&amp; TEXT( PMF_Farm__r.wetmill_washInfrastructureStatus__c) = &quot;Sin ranuras o grietas&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>channelsScamperOk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>checklist__c</fullName>
        <defaultValue>&quot;No cumple&quot;</defaultValue>
        <label>checklist</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>coffeeDryingSystemOk__c</fullName>
        <formula>IF( TEXT(PMF_Farm__r.wetmill_patioAndMecanicDryerStatus__c) = &quot;Sin granos de secados anteriores&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>coffeeDryingSystemOk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>coffeePackaging__c</fullName>
        <formula>IF( INCLUDES( PMF_Farm__r.cleanTransportContainers__c, &quot;Están limpios y aptos para la cosecha&quot;)=TRUE, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>coffeePackaging</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>controlAccordingMonitoring__c</fullName>
        <defaultValue>&quot;No cumple&quot;</defaultValue>
        <label>controlAccordingMonitoring</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evaluationPulping__c</fullName>
        <formula>IF( TEXT(PMF_Farm__r.wetmill_pulpingMachineWashedBeforeUse__c) = &quot;Se limpia antes de cada proceso&quot; &amp;&amp; INCLUDES( PMF_Farm__r.wetmill_pulpingMachinesStatus__c, &quot;Granos enteros y limpios&quot;) = TRUE , &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>evaluationPulping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>farmMap__c</fullName>
        <formula>&quot;No cumple&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>farmMap</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fermentationTanksOk__c</fullName>
        <formula>IF( TEXT(PMF_Farm__r.wetmill_fermentationTanksStatus__c) = &quot;Sin ranuras o grietas&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fermentationTanksOk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fmp_Agrochemicals_Score__c</fullName>
        <formula>(IF( hasProtectionEquipment__c = &quot;Cumple&quot;, 1, 0) + IF( useProtectionEquipment__c = &quot;Cumple&quot;, 1, 0)) + (IF( recordsAgrochemicalsApplications__c = &quot;Cumple&quot;, 1, 0) + IF( trainsStaffAgrochemicalsHandling__c = &quot;Cumple&quot;, 1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fmp_Agrochemicals_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fmp_Environment_Score__c</fullName>
        <formula>IF( wastewaterManagement__c = &quot;Cumple&quot;, 1, 0) + IF( wetmillWaterManagement__c = &quot;Cumple&quot;, 1, 0) + IF( transformationPulpsForUse__c = &quot;Cumple&quot;, 1, 0) + IF( FaunaFloraRecoveryPlan__c = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fmp_Environment_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fmp_Harvest_Score__c</fullName>
        <formula>IF( harvestRecord__c = &quot;Cumple&quot;, 1, 0) + IF( harvestEvaluation__c = &quot;Cumple&quot;, 1, 0) + IF( wetmillSafety__c = &quot;Cumple&quot;, 1, 0) + IF( evaluationPulping__c = &quot;Cumple&quot;, 1, 0) + IF( warehouseSafety__c = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fmp_Harvest_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fmp_Lot_Score__c</fullName>
        <formula>IF( farmMap__c = &quot;Cumple&quot;, 1, 0) + IF( knowledgeAreasLots__c = &quot;Cumple&quot;, 1, 0) + IF(recordVarietiesTreesPerLot__c = &quot;Cumple&quot;, 1, 0) + IF( registrationWorkPerLot__c = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fmp_Lot_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fmp_MIPE_Score__c</fullName>
        <formula>IF( monitoringRecordPestDisease__c = &quot;Cumple&quot;, 1, 0) + IF( makingMonitoringPestsDiseases__c = &quot;Cumple&quot;, 1, 0) + IF(controlAccordingMonitoring__c = &quot;Cumple&quot;, 1, 0) + IF(postControlEvaluation__c = &quot;Cumple&quot;, 1, 0)+IF( usingControlMethodsForPYE__c = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fmp_MIPE_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fmp_Record_score__c</fullName>
        <formula>IF(recordHarvesting__c = &quot;Cumple&quot;, 1, 0) + IF(recordOfLabor__c = &quot;Cumple&quot;, 1, 0) + IF(recordPesticideApplications__c = &quot;Cumple&quot;, 1, 0) + IF(recordPurchasingInputs__c = &quot;Cumple&quot;, 1, 0) + IF(recordSalesCPS__c = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fmp_Record_score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fmp_Seedbed_Score__c</fullName>
        <formula>IF(implemetationSeedbedPlan__c = &quot;Cumple&quot;, 1, 0) + IF(properSubstratesPreparation__c = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fmp_Seedbed_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fmp_Shadow_Score__c</fullName>
        <formula>IF( usingNativeSpeciesAsShading__c = &quot;Cumple&quot;, 1, 0)+IF( regulationOfShadow__c = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fmp_Shadow_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fmp_Soil_Score__c</fullName>
        <formula>IF(identifyingErodedAreas__c = &quot;Cumple&quot;, 1,0) + IF(recoveryErodedAreas__c = &quot;Cumple&quot;, 1, 0) + IF(reforestationNativeSpecies__c = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fmp_Soil_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fmp_Total_Score__c</fullName>
        <label>fmp_Total_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fmp_Weeds_Score__c</fullName>
        <formula>IF( friendlyMethodsReducingHerbicide__c = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fmp_Weeds_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fmp_Wetmill_Score__c</fullName>
        <formula>IF(checklist__c = &quot;Cumple&quot;, 1, 0) + IF(separationCoffeePerLot__c = &quot;Cumple&quot;, 1, 0) + IF(separationCoffeeQuality__c = &quot;Cumple&quot;, 1, 0) + IF(pulpingMachineOk__c = &quot;Cumple&quot;, 1, 0) + IF(zarandaGoodCondition__c = &quot;Cumple&quot;, 1, 0) + IF(fermentationTanksOk__c = &quot;Cumple&quot;, 1, 0) + IF(tanksMucilageRemoverOk__c = &quot;Cumple&quot;, 1, 0) + IF(channelsScamperOk__c = &quot;Cumple&quot;, 1, 0) + IF(pulpCompostingPit__c = &quot;Cumple&quot;, 1, 0) + IF(honeyWaterTreatmentTank__c = &quot;Cumple&quot;, 1, 0) + IF(coffeePackaging__c = &quot;Cumple&quot;, 1, 0) + IF(properCoffeeStorage__c = &quot;Cumple&quot;, 1, 0) + IF(adequateTransportation__c = &quot;Cumple&quot;, 1, 0) + IF(coffeeDryingSystemOk__c = &quot;Cumple&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>fmp_Wetmill_Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>friendlyMethodsReducingHerbicide__c</fullName>
        <formula>IF( INCLUDES( PMF_Farm__r.weedsControlMethods__c, &quot;Control físico/mecánico&quot;) = TRUE ||  INCLUDES( PMF_Farm__r.weedsControlMethods__c, &quot;Cultivos de cobertura&quot;) = TRUE  ||  INCLUDES(  PMF_Farm__r.weedsControlMethods__c, &quot;Mulch (colchón material orgánico)&quot;) = TRUE ||  INCLUDES(  PMF_Farm__r.weedsControlMethods__c, &quot;Distancias de siembra&quot;) = TRUE ||  INCLUDES( PMF_Farm__r.weedsControlMethods__c, &quot;Manejo de Sombra&quot;) = TRUE, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>friendlyMethodsReducingHerbicide</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>harvestEvaluation__c</fullName>
        <formula>&quot;No cumple&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>harvestEvaluation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>harvestRecord__c</fullName>
        <formula>IF( INCLUDES( PMF_Farm__r.identifiesHarvestedCoffee__c, &quot;Con documentación/registros de soporte&quot;) = TRUE, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>harvestRecord</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasProtectionEquipment__c</fullName>
        <formula>IF( TEXT(PMF_Farm__r.useOfProtApplicationDangSubstances__c) = &quot;Sí, siempre&quot; || TEXT(PMF_Farm__r.useOfProtApplicationDangSubstances__c) = &quot;Sí, algunas veces&quot; || TEXT(PMF_Farm__r.useOfProtApplicationDangSubstances__c) = &quot;No, pero si hay equipo de protección&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>hasProtectionEquipment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>honeyWaterTreatmentTank__c</fullName>
        <formula>IF( INCLUDES( PMF_Farm__r.wetmill_residualWaterDisposal__c, &quot;Las vierte en pozos de infiltración&quot;) = TRUE ||  INCLUDES( PMF_Farm__r.wetmill_residualWaterDisposal__c, &quot;Planta de tratamiento de aguas mieles&quot;) = TRUE, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>honeyWaterTreatmentTank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>identifyingErodedAreas__c</fullName>
        <formula>IF( TEXT(PMF_Farm__r.erosionZonesIdentified__c) = &quot;Sí&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>identifyingErodedAreas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>implemetationSeedbedPlan__c</fullName>
        <formula>IF( INCLUDES( PMF_Farm__r.farmManagmtDocuments__c, &quot;Plan de Manejo de Almácigos&quot;) = TRUE, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>implemetationSeedbedPlan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>knowledgeAreasLots__c</fullName>
        <formula>&quot;No cumple&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>knowledgeAreasLots</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>makingMonitoringPestsDiseases__c</fullName>
        <formula>IF( TEXT(PMF_Farm__r.doesPlagues_DiseaseSampling__c) = &quot;Sí hace muestreos&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>makingMonitoringPestsDiseases</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>monitoringRecordPestDisease__c</fullName>
        <defaultValue>&quot;No cumple&quot;</defaultValue>
        <label>monitoringRecordPestDisease</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postControlEvaluation__c</fullName>
        <defaultValue>&quot;No cumple&quot;</defaultValue>
        <label>postControlEvaluation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>properCoffeeStorage__c</fullName>
        <formula>IF( TEXT( PMF_Farm__r.wetmill_storageCleanlinessStatus__c) = &quot;Buenas condiciones de limpieza&quot; &amp;&amp; TEXT( PMF_Farm__r.wetmill_baseUsedForStorage__c) = &quot;Sobre madera o estibas&quot; &amp;&amp; TEXT( PMF_Farm__r.wetmill_hasPestControl__c) = &quot;Adecuado control de plagas y roedodres&quot; &amp;&amp; TEXT( PMF_Farm__r.wetmill_humidityRisk__c) = &quot;No presenta riesgos de humedad&quot; &amp;&amp; TEXT( PMF_Farm__r.wetmill_contaminationRisk__c) = &quot;No hay riesgos de contaminación&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>properCoffeeStorage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>properSubstratesPreparation__c</fullName>
        <formula>&quot;No cumple&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>properSubstratesPreparation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pulpCompostingPit__c</fullName>
        <formula>IF( INCLUDES( PMF_Farm__r.wetmill_pulpManagement__c, &quot;Procesa en compost en cuanto es posible&quot;)= TRUE, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>pulpCompostingPit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pulpingMachineOk__c</fullName>
        <formula>IF( INCLUDES( PMF_Farm__r.wetmill_pulpingMachinesStatus__c, &quot;Granos enteros y limpios&quot;)=TRUE, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>pulpingMachineOk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordHarvesting__c</fullName>
        <formula>IF( INCLUDES(PMF_Farm__r.identifiesHarvestedCoffee__c, &quot;Con documentación/registros de soporte&quot;)=TRUE, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>recordHarvesting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordOfLabor__c</fullName>
        <formula>IF( TEXT(PMF_Farm__r.hires_RegistersTempStaff__c) = &quot;Si contrata y tiene registros&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>recordOfLabor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordPesticideApplications__c</fullName>
        <formula>IF( INCLUDES( PMF_Farm__r.registersPlague_DiseaseCtrlSupplies__c, &quot;Fecha de aplicación,Dosis,Lote&quot;)=TRUE, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>recordPesticideApplications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordPurchasingInputs__c</fullName>
        <formula>IF( INCLUDES( PMF_Farm__r.farmManagmtDocuments__c, &quot;Registro de insumos&quot;)=TRUE, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>recordPurchasingInputs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordSalesCPS__c</fullName>
        <formula>IF( TEXT(PMF_Farm__r.coffeeInvoicesRegistered__c) = &quot;Sí, con toda la información requerida&quot; || TEXT(PMF_Farm__r.coffeeInvoicesRegistered__c) = &quot;Sí, pero NO con toda la información&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>recordSalesCPS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordVarietiesTreesPerLot__c</fullName>
        <formula>&quot;No cumple&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>recordVarietiesTreesPerLot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordsAgrochemicalsApplications__c</fullName>
        <formula>IF( INCLUDES( PMF_Farm__r.registersPlague_DiseaseCtrlSupplies__c, &quot;Fecha de aplicación&quot;) = TRUE &amp;&amp; INCLUDES( PMF_Farm__r.registersPlague_DiseaseCtrlSupplies__c, &quot;Dosis&quot;) = TRUE  &amp;&amp;  INCLUDES( PMF_Farm__r.registersPlague_DiseaseCtrlSupplies__c, &quot;Lote&quot;) = TRUE , &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>recordsAgrochemicalsApplications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recoveryErodedAreas__c</fullName>
        <formula>IF(INCLUDES(PMF_Farm__r.soilConservationPractices__c, &quot;Curvas a nivel&quot;) = TRUE || INCLUDES(PMF_Farm__r.soilConservationPractices__c, &quot;Terrazas individuales&quot;) = TRUE || INCLUDES(PMF_Farm__r.soilConservationPractices__c, &quot;Terrazas de banco&quot;) = TRUE || INCLUDES( PMF_Farm__r.soilConservationPractices__c, &quot;Barreras vivas&quot;) = TRUE ||  INCLUDES( PMF_Farm__r.soilConservationPractices__c, &quot;Barreras físicas&quot;) = TRUE ||  INCLUDES( PMF_Farm__r.soilConservationPractices__c, &quot;Acequias&quot;) = TRUE ||  INCLUDES( PMF_Farm__r.soilConservationPractices__c, &quot;Cultivos de cobertura de suelo&quot;) = TRUE ||  INCLUDES( PMF_Farm__r.soilConservationPractices__c, &quot;Mulch (colchon de materia orgánica)&quot;) = TRUE, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>recoveryErodedAreas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reforestationNativeSpecies__c</fullName>
        <formula>IF( TEXT(PMF_Farm__r.biologicalDiversityContrib__c) = &quot;Sí&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reforestationNativeSpecies</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>registrationWorkPerLot__c</fullName>
        <formula>&quot;No cumple&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>registrationWorkPerLot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>regulationOfShadow__c</fullName>
        <formula>IF( PMF_Farm__r.percentageShade__c &gt; 20, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>regulationOfShadow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>separationCoffeePerLot__c</fullName>
        <formula>IF( TEXT(PMF_Farm__r.wetmill_canSeparateByLot__c) = &quot;Puede separar lotes/calidades/certif.&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>separationCoffeePerLot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>separationCoffeeQuality__c</fullName>
        <formula>IF( TEXT(PMF_Farm__r.wetmill_classifiesInputCoffeeQuality__c) = &quot;Sí&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>separationCoffeeQuality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>FMP Diagnostics_Submission</relationshipLabel>
        <relationshipName>FMP_Diagnostics_Submission</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tanksMucilageRemoverOk__c</fullName>
        <formula>IF( INCLUDES( PMF_Farm__r.wetmill_coffeWashMeans__c, &quot;Desmucilaginadora&quot;) = TRUE &amp;&amp; TEXT( PMF_Farm__r.wetmill_washInfrastructureStatus__c) = &quot;Sin ranuras o grietas&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>tanksMucilageRemoverOk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trainsStaffAgrochemicalsHandling__c</fullName>
        <formula>IF( TEXT(PMF_Farm__r.dangSubstancesManipulatorsTrained__c) = &quot;Sí&quot; || TEXT(PMF_Farm__r.dangSubstancesManipulatorsTrained__c) = &quot;No aplica, no usa sustancias peligrosas&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>trainsStaffAgrochemicalsHandling</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transformationPulpsForUse__c</fullName>
        <formula>IF( INCLUDES( PMF_Farm__r.wetmill_pulpManagement__c, &quot;Procesa en compost en cuanto es posible&quot;) = TRUE, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>transformationPulpsForUse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>useProtectionEquipment__c</fullName>
        <formula>IF( TEXT(PMF_Farm__r.useOfProtApplicationDangSubstances__c) = &quot;Sí, siempre&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>useProtectionEquipment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usingControlMethodsForPYE__c</fullName>
        <formula>IF( INCLUDES( PMF_Farm__r.howDoesDiseaseControl__c, &quot;Variedades resistentes&quot;) = TRUE ||  INCLUDES( PMF_Farm__r.howDoesDiseaseControl__c, &quot;Regulando distanciamientos y sombra&quot;) = TRUE  ||  INCLUDES(  PMF_Farm__r.howDoesDiseaseControl__c, &quot;Controlando malezas&quot;) = TRUE ||  INCLUDES(  PMF_Farm__r.howDoesDiseaseControl__c, &quot;Podas y renovación de cafetales&quot;) = TRUE ||  INCLUDES( PMF_Farm__r.howDoesDiseaseControl__c, &quot;Uso de fungicidas sistémicos&quot;) = TRUE ||  INCLUDES(  PMF_Farm__r.howDoesDiseaseControl__c, &quot;Uso de fungicidas de contacto&quot;) = TRUE ||  INCLUDES(  PMF_Farm__r.howDoesDiseaseControl__c, &quot;Otros&quot;) = TRUE, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>usingControlMethodsForPYE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usingNativeSpeciesAsShading__c</fullName>
        <formula>IF( PMF_Farm__r.percShadeNativeSpecies__c&gt; 50 , &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>usingNativeSpeciesAsShading</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>warehouseSafety__c</fullName>
        <formula>IF( TEXT(PMF_Farm__r.wetmill_storageCleanlinessStatus__c) = &quot;Buenas condiciones de limpieza&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>warehouseSafety</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wastewaterManagement__c</fullName>
        <formula>IF( INCLUDES( PMF_Farm__r.wetmill_residualWaterDisposal__c, &quot;Las vierte en pozos de infiltración&quot;) = TRUE || INCLUDES( PMF_Farm__r.wetmill_residualWaterDisposal__c, &quot;Planta de tratamiento de aguas mieles&quot;) = TRUE, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>wastewaterManagement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wetmillSafety__c</fullName>
        <formula>IF( INCLUDES( PMF_Farm__r.wetmill_majorNonCompliance__c, &quot;Aprobado para la certificación&quot;) = TRUE, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>wetmillSafety</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wetmillWaterManagement__c</fullName>
        <formula>IF( INCLUDES( PMF_Farm__r.wetmill_residualWaterDisposal__c, &quot;La utiliza como modo de fertilización&quot;) = TRUE, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>wetmillWaterManagement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zarandaGoodCondition__c</fullName>
        <formula>IF( TEXT(PMF_Farm__r.wetmill_separatedGrainsProcessedAppart__c) = &quot;Sí&quot;, &quot;Cumple&quot;, &quot;No cumple&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zarandaGoodCondition</label>
        <type>Text</type>
    </fields>
    <label>FMP Diagnostic</label>
    <nameField>
        <displayFormat>FMP-{000000}</displayFormat>
        <label>FMP Diagnostic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FMP Diagnostics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>